* [minor breaking] you likely don't need to change your code

// DO NOT EDIT: the "Unreleased" section header is automatically updated by bb publish
// bb publish will fail on any of:
// - unreleased section not found,
// - unreleased section empty
// - optional attribute is not [breaking] or [minor breaking]
//   (adjust these in publish.clj as you see fit)
== Unreleased [minor breaking]

* Technically breaking
** {issue}613[#612]: Remove all support for long obsolete and long untested PhantomJS
({lread})
** {issue}467[#467]: Move to W3C WebDriver spec.
({lread})
*** The impetus was Firefox no longer supporting legacy `:capabilities` syntax.
The breaking impact was on Chrome/Edge, when in "w3c mode" it will fail on WebDriver endpoints where there is a viable w3c alternative.
This means some custom Chrome specific fns should now be expressed as w3c WebDriver actions.
The following Chrome-specific fns have been deleted:
**** `mouse-btn-down`
**** `mouse-btn-up`
**** `with-mouse-btn`
**** `mouse-move-to` (was also available in Firefox)
**** `mouse-click`
**** `right-click`
**** `left-click`
**** `touch-down`
**** `touch-move`
**** `touch-up`
*** Remove internal support for undocumented `:desired-capabilities`.
The implementation was either ultra legacy or misunderstood legacy APIs.

* Other changes
** Add new fns that more lightly abstract W3C WebDriver Spec (as part of {issue}467[#467] API review sweep)
({lread})
*** `get-timeouts` - as alternative to `get-*-timeout`
*** `set-timeouts` - as alternative to `set-*-timeout`
*** `get-element-rect` - as alternative to `get-element-size`, `get-element-location`
*** `get-element-rect-el` - as alternative to `get-element-size-el`, `get-element-location-el`
*** `get-window-rect` - as alternative to `get-window-size`, `get-window-position`
*** `set-window-rect` - as alternative to `set-window-size`, `set-window-position`
** Review tests and add some missing coverage (as part of {issue}467[#467] API review sweep)
({lread})