@@ -1,9 +1,8 @@
 {:paths ["src" "resources"]
- :deps {org.clojure/clojure {:mvn/version "1.9.0"} ;; min clojure version
+ :deps {org.clojure/clojure {:mvn/version "1.10.3"} ;; min clojure version
         babashka/fs {:mvn/version "0.5.21"}
         babashka/process {:mvn/version "0.5.22"}
-        clj-http/clj-http {:mvn/version "3.13.0"} ;; for jvm use
-        org.clj-commons/clj-http-lite {:mvn/version "1.0.13"} ;; for babashka use
+        org.babashka/http-client {:mvn/version "0.4.20"}
         slingshot/slingshot {:mvn/version "0.12.2"}
         cheshire/cheshire {:mvn/version "5.13.0"}
         org.clojure/tools.cli {:mvn/version "1.1.230"}
